--- a/themes/academydeliver/scss/template/_footer.scss
+++ b/themes/academydeliver/scss/template/_footer.scss
@@ -5,6 +5,7 @@
     @extend .padding-horiz;
     padding-top: 2rem;
     @include clearfix;
+    box-shadow: 0px 500px 0px 500px $core-accent-dark;
     a {
       color: $core-text;
       &:hover {
@@ -37,7 +38,7 @@
         float: none;
         clear: both;
         width: 100%;
-        padding-top: 2rem;
+        // padding-top: 2rem;
       }
 
       li {
@@ -74,7 +75,9 @@
         width: 40%;
       }
       &.centered {
-        text-align: center;
+        @include breakpoint(no-mobile) {
+          text-align: center;
+        }
         width: 30%;
       }
       display: block;
